Add BookReducedDto