@@ -3,40 +3,40 @@ package ru.itgirl.libraryproject.service;
 //import com.sun.media.sound.SF2Instrument;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import ru.itgirl.libraryproject.dto.BookDto;
-import ru.itgirl.libraryproject.dto.GenreByIdDto;
+import ru.itgirl.libraryproject.dto.BookReducedDto;
 import ru.itgirl.libraryproject.dto.GenreDto;
 import ru.itgirl.libraryproject.model.Genre;
 import ru.itgirl.libraryproject.repository.GenreRepository;
 
 import java.util.List;
-import java.util.Collection;
-import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class GenreServiceImpl implements GenreService{
     private final GenreRepository genreRepository;
     public GenreDto getGenreById(Long id) {
-        Genre genre;
-        genre = genreRepository.findById(id).orElseThrow();
+        Genre genre = genreRepository.findById(id).orElseThrow();
         return convertToDto(genre);
     }
     private GenreDto convertToDto(Genre genre) {
-        List<BookDto> bookDtoList = genre.getBooks()
+        List<BookReducedDto> bookReducedDtoList = genre.getBooks()
                 .stream()
-                .map(book -> BookDto.builder()
-                        .genre(book.getGenre().getName())
+                .map(book -> BookReducedDto.builder()
                         .name(book.getName())
                         .id(book.getId())
+                        .authors(book.getAuthors()
+                                .stream()
+                                .map(author -> author.getName() +  " " + author.getSurname())
+                                .collect(Collectors.joining(", ")))
                         .build()
-                ).toList();
+                ).collect(Collectors.toList());
+        GenreDto genreDto = new GenreDto();
+        genreDto.setId(genre.getId());
+        genreDto.setName(genre.getName());
+        genreDto.setBooks(bookReducedDtoList);
 
-        return GenreDto.builder()
-                .id(genre.getId())
-                .name(genre.getName())
-                .books(bookDtoList)
-                .build();
+        return genreDto;
     }
 }
 
